--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@stripe/react-stripe-js": "^2.4.0",
     "@stripe/stripe-js": "^2.2.0",
     "react": "^18.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
     "styled-components": "^6.1.1"
