--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "concurrently \"cd ./server && npm run start \" \"cd ./client && npm run dev\"",
     "develop": "concurrently \"cd ./server && npm run watch\" \"cd ./client && npm run dev\"",
-    "postinstall": "cd ./server && npm install && cd ./client && npm run install"
+    "postinstall": "npm install --prefix ./server && npm install --prefix ./client && npm run dev --prefix ./client"
   },
   "keywords": [],
   "author": "",
