--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "concurrently \"cd ./server && npm run start \" \"cd ./client && npm run dev\"",
+    "start": "concurrently \"cd server && npm run start \" \"cd client && npm run dev\"",
     "develop": "concurrently \"cd ./server && npm run watch\" \"cd ./client && npm run dev\"",
     "postinstall": "npm install --prefix ./server && npm install --prefix ./client "
   },
