--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "concurrently \"cd server && npm run start \" \"cd client && npm run dev\"",
     "develop": "concurrently \"cd ./server && npm run watch\" \"cd ./client && npm run dev\"",
+    "client": "cd ./client && npm run dev\"",
     "postinstall": "npm install --prefix ./server && npm install --prefix ./client "
   },
   "keywords": [],
