--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "develop": "concurrently \"cd ./server && npm run watch\" \"cd ./client && npm run dev\"",
     "client": "cd ./client && npm run dev",
     "serv": "cd ./server && npm run start",
+    "installcliente": "npm install --prefix ./client ",
         "postinstall": "npm install --prefix ./server && npm install --prefix ./client "
   },
   "keywords": [],
