--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,8 @@
     "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
-    "styled-components": "^6.1.1"
+    "styled-components": "^6.1.1",
+    "vite": "^5.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
