--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "posinstall": "npm run build"
+    "postinstall": "npm run build",
+    "start": "serve -s dist"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
