--- a/package.json
+++ b/package.json
@@ -5,18 +5,20 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "concurrently \"cd server && npm run start\" \"cd client && npm run build && serve -s dist\"",
+    "start": "concurrently \"cd server && npm run start\" \"cd client && npm run build && cd client npm run start\"",
     "develop": "concurrently \"cd ./server && npm run watch\" \"cd ./client && npm run dev\"",
     "client": "cd ./client && npm run dev",
     "buildclient": "cd ./client && npm run build",
     "serve": "cd ./server && npm run start",
-    "r": "npm install --prefix ./client ",
-        "postinstall": "npm install --prefix ./server && npm install --prefix ./client "
+    "installcliente": "npm install --prefix ./client ",
+    "postinstall": "npm install --prefix ./server && npm install --prefix ./client ",
+    "heroku-postbuild": "npm run build --prefix ./client" 
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "concurrently": "^8.2.2"
+    "concurrently": "^8.2.2",
+    "serve": "^14.2.1"
   }
 }
