--- a/package.json
+++ b/package.json
@@ -4,16 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "predeploy": "npm install --prefix ./client && npm run buildclient",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "concurrently \"cd server && npm run start\" \"cd client && npm run build && cd client npm run start\"",
     "develop": "concurrently \"cd ./server && npm run watch\" \"cd ./client && npm run dev\"",
-    "client": "cd ./client && npm run dev",
-    "buildclient": "cd ./client && npm run build",
-    "serve": "cd ./server && npm run start",
-    "installcliente": "npm install --prefix ./client ",
-    "postinstall": "npm install --prefix ./server && npm install --prefix ./client "
-  },
+    "install": "cd server && npm i && cd ../client && npm i",
+    "build": "cd client && npm run build"
+    },
   "keywords": [],
   "author": "",
   "license": "ISC",
