--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "concurrently \"cd server && npm run start\" \"cd client && npm run build && cd client npm run start\"",
+    "start": "node server/server.js",
     "develop": "concurrently \"cd ./server && npm run watch\" \"cd ./client && npm run dev\"",
     "install": "cd server && npm i && cd ../client && npm i",
     "build": "cd client && npm run build"
