--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server/server.js",
-    "develop": "concurrently \"cd ./server && npm run watch\" \"cd ./client && npm run dev\"",
-    "i": "cd ./server && npm i && cd ./client && npm i"
+    "develop": "concurrently \"cd ./server && npm run watch\" \"cd ../client && npm run dev\"",
+    "i": "cd ./server && npm i && cd ../client && npm i"
       },
   "keywords": [],
   "author": "",
