--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server/server.js",
     "develop": "concurrently \"cd ./server && npm run watch\" \"cd ../client && npm run dev\"",
-    "i": "cd ./server && npm i && cd ../client && npm i"
-      },
+    "i": "npm-run-all --prefix ./server i --prefix ./client i"
+        },
   "keywords": [],
   "author": "",
   "license": "ISC",
