--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server/server.js",
     "develop": "concurrently \"cd ./server && npm run watch\" \"cd ../client && npm run dev\"",
-    "i": "npm-run-all --prefix ./server i --prefix ./client i"
-        },
+    "i": "npm i --prefix ./server && npm i --prefix ./client"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
