--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server/server.js",
     "develop": "concurrently \"cd ./server && npm run watch\" \"cd ../client && npm run dev\"",
-    "i": "npm i --prefix ./server && npm i --prefix ./client"
+    "is": "npm i --prefix ./server",
+    "ic": "npm i --prefix ./client",
+    "build": "cd client && npm run build"
   },
   "keywords": [],
   "author": "",
