--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server/server.js",
     "develop": "concurrently \"cd ./server && npm run watch\" \"cd ../client && npm run dev\"",
-    "is": "cd server && npm i",
-    "ic": "cd client && npm i",
+    "installs": "cd server && npm i",
+    "installc": "cd client && npm i",
     "build": "cd client && npm run build"
   },
   "keywords": [],
