--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server/server.js",
     "develop": "concurrently \"cd ./server && npm run watch\" \"cd ../client && npm run dev\"",
-    "installs": "cd server && npm i",
+    "install": "concurrently \"cd ./server && npm i\" \"cd ../client && npm i\"",
     "installc": "cd client && npm i",
     "build": "cd client && npm run build"
   },
