--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server/server.js",
+    "develop": "concurrently \"cd ./server && npm run watch\" \"cd ../client && npm run dev\"",
+    "i": "concurrently \"cd ./server && npm i\" \"cd ../client && npm i\""
   },
   "keywords": [],
   "author": "",
