--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server/server.js",
     "develop": "concurrently \"cd ./server && npm run watch\" \"cd ../client && npm run dev\"",
-    "i": "concurrently \"cd ./server && npm i\" \"cd ../client && npm i\"",
+    "is": "cd server && npm i",
+    "ic": "cd client && npm o",
     "building": "cd client && npm run build"
   },
   "keywords": [],
