--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node server/server.js",
     "develop": "concurrently \"cd ./server && npm run watch\" \"cd ../client && npm run dev\"",
     "is": "cd server && npm i",
-    "ic": "cd client && npm o",
+    "ic": "cd client && npm i",
     "building": "cd client && npm run build"
   },
   "keywords": [],
