--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server/server.js",
-    "develop": "concurrently \"cd ./server && npm run watch\" \"cd ../client && npm run dev\"",
+    "start": "concurrently \"cd ./server && npm run start\" \"cd ../client && npm run dev\"",    "develop": "concurrently \"cd ./server && npm run watch\" \"cd ../client && npm run dev\"",
     "i": "cd ./server && npm i",
     "o": "cd ./client && npm i",
     "building": "cd client && npm run build"
