--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
     "styled-components": "^6.1.1",
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "@vitejs/plugin-react": "^4.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
